--- a/requirements.txt
+++ b/requirements.txt
@@ -13,3 +13,5 @@ tqdm>=4.41.0
 opencv-python-headless>=4.5.5.64
 opencv-contrib-python>=4.5.5.64
 albumentations>=1.1.0
+pandas>=1.3.5
+seaborn>=0.11.2
